# KenexarDC-Bot

./: .breakpoints  .cfduplication.yml  .gitignore  .zshrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  __main__.py  index.html  playground.py  playground2.py  pyproject.toml  req  riot.txt  start.sh  startup.py  test.feature
.github/workflows/: python-app.yml
API/: main.py  models.py  testing.http
API/Client/: __main__.py
bot_core/: setup.cfg
cogs/: admin.py  chicken.py  embeds.py  playground.py  relaod.py  reload.py
cogs/etc/: config.py  embeds.py  parser.py  presets.py
discord/: CMDstart.sh  __main__.py  all_roles_betrayedRift.py  define_global_vars.py  logging.conf  playground.py  restart.sh  start.sh  stop.sh
discord/cogs/: admin.py  automodulereloader.py  autoreaction.py  betrayed_rift.py  casino.py  channel_perm_changer.py  cycle.py  faceit.py  fun.py  gtarp_stuff.py  jointocreate.py  listener.py  maintainer_stuff.py  member_manager.py  membercounter.py  minecraft.py  playin.py  points.py  reload.py  ticket.py  twitchXdiscord.py  twitchnotify.py  verify.py
discord/kenutils/: __init__.py  channel_listener.py  faceit.py  pyproject.toml  setup.cfg  setup.py
discord/templates/: banner
discord/ticketArchive/: fill.txt
discord/utils/: checker.py  stack.py
src/: CMDstart.sh  __main__.py  all_roles_betrayedRift.py  define_global_vars.py  git-updater.py  playground.py  req  restart.sh  start.sh  stop.sh
templates/: templateBOTCONFIG
twitch/: __main__.py  new_token.py
webhook/: endpoint.py  request.http
website/: index.html
(+94 files in other folders)
