[tool.poetry]
name = "repl_python3_KenexarDC-Bot"
version = "0.1.0"
description = ""
authors = ["exersalza <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyfiglet = "^0.8.post1"
alive-progress = "^2.1.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
